# tui-spinner

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SQUARE_REFACTOR_SUMMARY.md  cliff.toml  justfile
.gitea/workflows/: ci.yml  deps-update.yml  release.yml
.github/workflows/: auto-merge.yml  ci.yml  deps-update.yml  release.yml
.zed/: rules.md
examples/: bar_spinner.rs  circle_spinner.rs  dot_spinner.rs  flux_spinner.rs  linear_spinner.rs  rectangular_spinner.rs  spinner.rs  square_spinner.rs  table_embed.rs  zed_spinner.rs
examples/vhs/: bar-spinner-demo.tape  circle-spinner-demo.tape  dot-spinner-demo.tape  flux-spinner-demo.tape  linear-spinner-demo.tape  rectangular-demo.tape  spinner-demo.tape  spinner-quick.tape  square-spinner-demo.tape  table-embed-demo.tape  zed-spinner-demo.tape
scripts/: bump_version.nu  check_publish.nu  migrate_to_gitea.nu  release_prepare.nu  setup_gitea.nu  upgrade_deps.nu  version.nu
scripts/ci/: quality_gate.nu  release_notes.nu  validate_tag.nu
scripts/tests/: run_all.nu  runner.nu  test_bump_version.nu  test_check_publish.nu  test_release_prepare.nu  test_upgrade_deps.nu  test_validate_tag.nu  test_version.nu
src/: bar_spinner.rs  circle_spinner.rs  dot_spinner.rs  flux_spinner.rs  lib.rs  linear_spinner.rs  macros.rs  rect_spinner.rs  rect_spinner.rs.backup  rectangular_spinner.rs  square_spinner.rs  zed_spinner.rs
