[package]
name = "tui-spinner"
version = "0.2.3"
authors = ["Sorin Albu-Irimies <sorinirimies@gmail.com>"]
edition = "2021"
rust-version = "1.74.0"
license = "MIT"
description = "Customizable animated spinner widgets for Ratatui — braille arcs, bouncing bars, rotating glyphs, and symbol styles"
repository = "https://github.com/sorinirimies/tui-spinner"
homepage = "https://github.com/sorinirimies/tui-spinner"
keywords = ["tui", "terminal", "ratatui", "spinner", "widget"]
categories = ["command-line-interface", "visualization", "rendering", "gui", "graphics"]
readme = "README.md"
exclude = [
    ".gitea/",
    ".github/",
    ".gitattributes",
    "GITEA_SETUP.md",
    "CHANGELOG.md",
    "cliff.toml",
    "justfile",
    "examples/vhs/",
    "scripts/",
]

[dependencies]
ratatui = { version = "0.29", default-features = false }

[dev-dependencies]
color-eyre = "0.6"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.29"

[lib]
name = "tui_spinner"
path = "src/lib.rs"

[[example]]
name = "spinner"
path = "examples/spinner.rs"

[[example]]
name = "bar_spinner"
path = "examples/bar_spinner.rs"

[[example]]
name = "flux_spinner"
path = "examples/flux_spinner.rs"

[[example]]
name = "square_spinner"
path = "examples/square_spinner.rs"

[[example]]
name = "circle_spinner"
path = "examples/circle_spinner.rs"

[[example]]
name = "linear_spinner"
path = "examples/linear_spinner.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
